Fix crossing media queries for visibility utilities
visible-xs and hidden-xs media query changed from (max-width: @screen-tablet) to (max-width: @screen-phone-max).
-xs media query intersects with the -sm media query before.

--- a/less/responsive-utilities.less
+++ b/less/responsive-utilities.less
@@ -42,7 +42,7 @@
   .responsive-invisibility();
 }
 .visible-xs {
-  @media (max-width: @screen-tablet) {
+  @media (max-width: @screen-phone-max) {
     .responsive-visibility();
   }
 }
@@ -69,7 +69,7 @@
   .responsive-visibility();
 }
 .hidden-xs {
-  @media (max-width: @screen-tablet) {
+  @media (max-width: @screen-phone-max) {
     .responsive-invisibility();
   }
 }
